--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "app-monorepo",
+	"name": "compromise-vault",
 	"version": "1.0.0",
-	"description": "",
+	"description": "backend for ssh key aggregator idk what else to put here",
 	"main": "index.js",
 	"scripts": {
 		"start": "pnpm --filter '@my-app/web' run start",
