--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,8 @@
-APP_ENV=development
-APP_PORT=3000
+APP_ENV=production
+APP_PORT=3001
 
-DATABASE_URL=replace
+# Use this values for local development
+#APP_ENV=development
+
+
+DATABASE_URL="<Prisma_Database_URL>"
